# nixos-updater

./: REDAME.md  flake.nix
daemon/: Cargo.toml
daemon/src/: args.rs  client.rs  consts.rs  daemon.rs  dbus_daemon.rs  errors.rs  main.rs  nix.rs
daemon/src/nix/: command.rs  flake.rs  mod.rs  store.rs
frontend/: Cargo.toml  build.rs
frontend/resources/: app.ui  frontend.ui  overview.ui  preferences.ui  resources.gresource.xml
frontend/src/: main.rs
frontend/src/ui/: imp.rs  mod.rs
frontend/src/ui/app/: imp.rs
frontend/src/ui/overview/: imp.rs  mod.rs
frontend/src/ui/preferences/: imp.rs  mod.rs
