[package]
name = "nixos-update-daemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dbus = "0.9.7"
dbus-crossroads = "0.5.2"
dbus-tokio = { version = "0.7.6", features = [ "dbus-crossroads" ] }
futures = "0.3"
tokio = { version = "1.36.0", features = ["time", "net", "macros", "rt-multi-thread"] }
