[package]
name = "nixos-update-daemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4", features = [ "cargo", "derive" ] }
dbus = "0.9"
dbus-crossroads = "0.5"
dbus-tokio = { version = "0.7", features = [ "dbus-crossroads" ] }
enum-variants-strings = "0.2"
futures = "0.3"
log = "0.4.20"
mktemp = "0.5.1"
nix = { version = "0.27", features = [ "user" ] }
stderrlog = "0.6.0"
tokio = { version = "1.36", features = ["time", "net", "macros", "rt-multi-thread"] }
