[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gio = { version = "0.19.2", features = [] }
gtk = { version = "0.8.1", package = "gtk4", features = ["v4_12"] }
adw = { package = "libadwaita", version = "0.6.0", features = ["gtk_v4_12"] }

[build-dependencies]
glib-build-tools = "0.19.0"
